# ragnar

./: .gitignore  CMakeLists.txt  README.md  api.cpp  api.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  watchlistdialog.cpp  watchlistdialog.h  watchlistdialog.ui
